<resources>
    <string name="app_name">Shikimori</string>
    <string name="abc_searchview_description_search">"Поиск"</string>
    <string name="shiki_font">stylo-bold.ttf</string>
    <string name="error_connection">Отсутствует подключение к интернету</string>
    <string name="error_server">Сервер не доступен, попробуйте позже</string>
    <string name="profile">Профиль</string>
    <string name="anime">Аниме</string>
    <string name="manga">Манга</string>
    <string name="calendar">Календарь</string>
    <string name="newsanddiscus">Новости и обсуждения</string>
    <string name="community">Сообщество</string>
    <string name="settings">Настройки</string>
    <string name="about">О программе</string>
    <string name="one_more_back_to_exit">Для выхода нажмите еще раз</string>
    <string name="serie_name">серия: %s</string>
    <string name="filter">Фильтр</string>
    <string name="search">Поиск</string>
    <string name="shiki_calendar">Календарь</string>
    <string name="user_name">Имя пользователя</string>
    <string name="error_auth">Не верный логин или пароль</string>
    <string name="error_auth_request">Невозможно получить токен</string>
    <string name="discusion">Обсуждение</string>
    <string name="lenta">Лента</string>
    <string name="seeing">Просмотренно %1$d / %2$d</string>
    <string name="reading">Прочитано %1$d / %2$d</string>
    <string name="reading_title">Читаю</string>
    <string name="seeing_all">Просмотренно %1$s (Вышло %2$s) из %3$s</string>
    <string name="reading_all">Прочитано %1$s из %2$s</string>
    <string name="episodes">Эпизоды:</string>
    <string name="episodes_title">Эпизоды</string>
    <string name="male">муж</string>
    <string name="female">жен</string>
    <string name="years">лет:</string>
    <string name="min"> мин.</string>
    <string name="info">Информация</string>
    <string name="description">Описание</string>
    <string name="rating">Оценка</string>
    <string name="gray">#222222</string>
    <string name="type">Тип</string>
    <string name="title_time">Длительность эпизода:</string>
    <string name="title_status">Статус</string>
    <string name="title_rating">Рейтинг</string>
    <string name="title_genres">Жанры</string>
    <string name="title_studios">Студии</string>
    <string name="title_studio">Студия</string>
    <string name="incoming">Вышло</string>
    <string name="anons">Анонс</string>
    <string name="ongoing">Онгоинг</string>
    <string name="planned">Запланировано</string>
    <string name="watching">Смотрю</string>
    <string name="watchingmanga">Читаю</string>
    <string name="completed">Просмотрено</string>
    <string name="completedmanga">Прочитано</string>
    <string name="on_hold">Отложено</string>
    <string name="dropped">Брошено</string>
    <string name="rewatching">Пересматриваю</string>
    <string name="rewatchingmanga">Перечитываю</string>
    <string name="lists_anime">Списки аниме</string>
    <string name="lists_manga">Список манги</string>
    <string name="volumes">Тома</string>
    <string name="chapters">Главы</string>
    <string name="title_publishers">Издатель</string>
    <string name="news">Новости</string>
    <string name="messages">Почта</string>
    <string name="notifying">Уведомления</string>
    <string name="history">История</string>
    <string name="forums">Форумы</string>
    <string name="favorite">Избранное</string>
    <string name="friends">Друзья</string>
    <string name="statistics">Статистика</string>
    <string name="status">Статус: </string>
    <string name="status_title">Статус</string>
    <string name="all">Все</string>
    <string name="all_topics">Все топики сайта</string>
    <string name="characters">Персонажи</string>
    <string name="site">Сайт</string>
    <string name="offtop">Оффтопик</string>
    <string name="clubs">Клубы</string>
    <string name="reviews">Обзоры</string>
    <string name="polls">Опросы</string>
    <string name="comments">Комментарии</string>
    <string name="comment">Комментарий</string>
    <string name="discus_anime">Обсуждение аниме</string>
    <string name="discus_manga">Обсуждение манги</string>
    <string name="open_details">Открыть детали</string>
    <string name="animegraf">Анимеграфия</string>
    <string name="mangagraf">Мангаграфия</string>
    <string name="cant_load_image">Не могу загрузить изображение</string>
    <string name="altname">Альтернативное имя</string>
    <string name="japanase_name">По японски</string>
    <string name="character">Персонаж</string>
    <string name="name">Имя</string>
    <string name="users">Пользователи</string>
    <string name="favotite_topics">Избранные топики</string>
    <string name="inbox">Почта</string>
    <string name="people">Люди</string>
    <string name="mangakas">Мангаки</string>
    <string name="seyu">Сейю</string>
    <string name="producers">Продюссеры</string>
    <string name="online">онлайн</string>
    <string name="was">был(а):</string>
    <string name="message">Сообщение</string>
    <string name="menu">Меню</string>
    <string name="about_me">О себе</string>
    <string name="set_message">Заполните сообщение</string>
    <string name="answer">Ответить</string>
    <string name="delete">Удалить</string>
    <string name="newtext">Новое</string>
    <string name="send_message">Отправить сообщение</string>
    <string name="add_friend">Добавить в друзья</string>
    <string name="elk_checked">%d отмечено</string>
    <string name="elk_mark_all">выбрать/снять все</string>
    <string name="wait_load_user_data">Подождите пока загрузиться данные</string>
    <string name="ignore">Игнорированть</string>
    <string name="disable_user_messages">Игнорировать пользователя</string>
    <string name="disable_user_messages_text">Включив игнор, вы так же удалите всю существующую переписку с пользователем</string>
    <string name="new_notify">Уведомления: %1$d</string>
    <string name="new_messages">Сообщения: %1$d</string>
    <string name="new_version">v: %1$s</string>
    <string name="new_news">Новости: %1$d</string>
    <string name="incomming_messages">Новые сообщения</string>
    <string name="wanted_title">В списках у людей</string>
    <string name="topic">Топик</string>
    <string name="topics">Топики</string>
    <string name="wait_load_data">Подождите ответа от сервера</string>
    <string name="edit">Редактировать</string>
    <string name="add_to_list">Добавить в список</string>
    <string name="delete_from_list">Удалить из списка</string>
    <string name="withoutrating">Без оценки</string>
    <string name="rating1">(1) Хуже некуда</string>
    <string name="rating2">(2) Ужасно</string>
    <string name="rating3">(3) Очень плохо</string>
    <string name="rating4">(4) Плохо</string>
    <string name="rating5">(5) Более-менее</string>
    <string name="rating6">(6) Нормально</string>
    <string name="rating7">(7) Хорошо</string>
    <string name="rating8">(8) Отлично</string>
    <string name="rating9">(9) Великолепно</string>
    <string name="rating10">(10) Эпик вин!</string>
    <string name="save">Сохранить</string>
    <string name="list_empty_message">Список пуст</string>
    <string name="annoning">Анонсировано</string>
    <string name="now_going">Сейчас выходит</string>
    <string name="done">Вышло</string>
    <string name="just_done">Недавно вышло</string>
    <string name="tv">TV Сериал</string>
    <string name="tv_short">Короткие</string>
    <string name="tv_middle">Средние</string>
    <string name="tv_long">Длинные</string>
    <string name="movies">Фильмы</string>
    <string name="ova">OVA</string>
    <string name="ona">ONA</string>
    <string name="special">Спешл</string>
    <string name="music">Клип</string>
    <string name="list">Список</string>
    <string name="episod_title">Эпизод</string>
    <string name="minute_10">До 10 минут</string>
    <string name="minute_30">До 30 минут</string>
    <string name="after_30">Более 30 минут</string>
    <string name="rating_g">G - Нет возрастных ограничений</string>
    <string name="rating_pg">PG - Рекомендуется присутствие родителей</string>
    <string name="rating_pg_13">PG-13 - Детям до 13 лет просмотр не желателен</string>
    <string name="rating_r">R-17 - Лицам до 17 лет обязательное присутствие взрослого</string>
    <string name="rating_r_plus">R+ - Лицам до 17 лет просмотр запрещен</string>
    <string name="rating_rx">Rx - Хентай</string>
    <string name="go_to">Перейти</string>
    <string name="sоrt_rating">По рейтингу</string>
    <string name="sоrt_populating">По популярности</string>
    <string name="sоrt_name">По алфавиту</string>
    <string name="sоrt_aired_on">По дате выхода</string>
    <string name="sоrt_id">По дате добавления</string>
    <string name="clear">Очистить</string>
    <string name="title_order">Сортировка</string>
    <string name="doujin">Додзинси</string>
    <string name="manhua">Маньхуа</string>
    <string name="manhwa">Манхва</string>
    <string name="novel">Новелла</string>
    <string name="one_shot">Ваншот</string>
    <string name="sort_shounen">Сёнен</string>
    <string name="sort_shounen_ai">Сёнен Ай</string>
    <string name="sort_seinen">Сейнен</string>
    <string name="sort_shoujo">Сёдзе</string>
    <string name="sort_shoujo_ai">Сёдзе Ай</string>
    <string name="sort_josei">Дзёсей</string>
    <string name="sort_comedy">Комедия</string>
    <string name="sort_romance">Романтика</string>
    <string name="sort_school">Школа</string>
    <string name="sort_dementia">Безумие</string>
    <string name="sort_martial_arts">Боевые искусства</string>
    <string name="sort_vampire">Вампиры</string>
    <string name="sort_military">Военное</string>
    <string name="sort_harem">Гарем</string>
    <string name="sort_demons">Демоны</string>
    <string name="sort_kids">Детское</string>
    <string name="sort_drama">Драма</string>
    <string name="sort_game">Игры</string>
    <string name="sort_historical">Исторический</string>
    <string name="sort_space">Космос</string>
    <string name="sort_magic">Магия</string>
    <string name="sort_cars">Машины</string>
    <string name="sort_mecha">Меха</string>
    <string name="sort_mystery">Мистика</string>
    <string name="sort_music">Музыка</string>
    <string name="sort_parody">Пародия</string>
    <string name="sort_slice_of_life">Повседневность</string>
    <string name="sort_police">Полиция</string>
    <string name="sort_adventure">Приключения</string>
    <string name="sort_psychological">Психологическое</string>
    <string name="sort_samurai">Самураи</string>
    <string name="sort_supernatural">Сверхъестественное</string>
    <string name="sort_gender_bender">Смена пола</string>
    <string name="sort_sports">Спорт</string>
    <string name="sort_super_power">Супер сила</string>
    <string name="sort_horror">Ужасы</string>
    <string name="sort_sci_fi">Фантастика</string>
    <string name="sort_fantasy">Фэнтези</string>
    <string name="sort_action">Экшен</string>
    <string name="sort_ecchi">Этти</string>
    <string name="sort_thriller">Триллер</string>
    <string name="sort_hentai">Хентай</string>
    <string name="sort_yaoi">Яой</string>
    <string name="sort_yuri">Юри</string>
    <string name="see_screens">Cкриншоты</string>
    <string name="see_similar">Похожее</string>
    <string name="screens">Галерея</string>
    <string name="similar_anime">Похожее аниме</string>
    <string name="similar_manga">Похожая манга</string>
    <string name="downloadanibreak">Для просмотра видео необходимо поставить Anibreak</string>
    <string name="anibreak_url">http://anibreak.ru/</string>
    <string name="images">Картинки</string>
    <string name="updateanibreak">Необходимо обновить Anibreak</string>
    <string name="relize">Релиз</string>
    <string name="unknow">Не известно</string>
    <string name="logout">Выйти?</string>
    <string name="link">Связь</string>
    <string name="videos">Видео</string>
</resources>