<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ui="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="@dimen/defaultPaddingMini"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ru.altarix.ui.CustomEditText
                android:id="@+id/cetEpisodes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/defaultPadding"
                android:layout_weight=".9"
                android:inputType="number"
                android:hint="@string/episodes_title" />

            <ImageButton
                android:id="@+id/bMinus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_action_down"
                android:theme="@style/altarixUiButtonTheme"
                android:padding="@dimen/defaultPadding4"/>

            <ImageButton
                android:id="@+id/bPlus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_action_up"
                android:theme="@style/altarixUiButtonTheme"
                android:padding="@dimen/defaultPadding4"/>

        </LinearLayout>

        <ru.altarix.ui.CustomSpinner
            android:id="@+id/csRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rating"
            ui:uiArray="@array/rating" />

        <ru.altarix.ui.CustomSpinner
            android:id="@+id/csStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/status_title" />

        <ru.altarix.ui.CustomEditText
            android:id="@+id/cetRewatching"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/rewatching" />


        <ru.altarix.ui.CustomEditText
            android:id="@+id/cetComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comment" />

        <TextView
            android:id="@+id/bSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/altarixUiButton"
            android:background="?attr/selectableItemBackground"
            android:textColor="@color/colorAccent"
            android:layout_gravity="right"
            android:text="@string/save" />

    </LinearLayout>
</ScrollView>