<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/svMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/defaultPaddingMini"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <ImageView
                    android:id="@+id/ivPoster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />

                <org.shikimori.library.custom.ExpandableHeightGridView
                    android:id="@+id/llStudios"
                    android:focusable="false"
                    android:padding="@dimen/defaultPaddingMini"
                    android:descendantFocusability="afterDescendants"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvTitle"
                    style="@style/altarixUiText.TextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="bottom"
                    android:background="@color/tool_background_70"
                    android:gravity="center_vertical"
                    android:minHeight="@dimen/paddingMfcQueueTime"
                    android:padding="@dimen/defaultPadding"
                    android:textColor="@color/white_overlay_85" />

                <TextView
                    android:id="@+id/tvStatus"
                    style="@style/notyfy_style_blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/tvTitle"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:textSize="@dimen/guTextSizeNormal"
                    android:visibility="gone" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fbPlay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_shiki_play"
                    android:visibility="gone"
                    android:layout_above="@+id/tvTitle"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="-8dp"
                    android:elevation="2dp"
                    />

            </RelativeLayout>

            <org.shikimori.library.custom.CustomAddRateView
                android:id="@+id/llWrapAddList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.gars.verticalratingbar.VerticalRatingBar
                android:id="@+id/vRatingBar"
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/defaultPaddingMini"/>

            <com.mcgars.imagefactory.cutomviews.ImageFactoryView
                android:id="@+id/imageFactory"
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/defaultPaddingMini"
                android:layout_height="150dp" />

            <TextView
                android:id="@+id/tvMenuVideo"
                style="@style/altarixUiText.TextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_overlay_85"
                android:padding="@dimen/defaultPadding"
                android:text="@string/videos"
                android:visibility="gone"
                android:textStyle="bold" />

            <org.shikimori.library.custom.MoreMosaicView
                android:id="@+id/mosaicViewVideo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/defaultPadding"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tvMenuInfo"
                style="@style/altarixUiText.TextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_overlay_85"
                android:padding="@dimen/defaultPadding"
                android:text="@string/info"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/llInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/defaultPadding" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/defaultPaddingMini"
                android:paddingRight="@dimen/defaultPaddingMini"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bSimilar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_similar"
                    android:theme="@style/altarixUiButtonTheme"
                    android:textSize="@dimen/guTextSize12"
                    />

                <Button
                    android:id="@+id/bLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link"
                    android:theme="@style/altarixUiButtonTheme"
                    android:layout_marginLeft="@dimen/defaultPaddingMini"
                    android:textSize="@dimen/guTextSize12"
                    />

            </LinearLayout>


            <TextView
                android:id="@+id/tvMenuRewiew"
                style="@style/altarixUiText.TextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_overlay_85"
                android:padding="@dimen/defaultPadding"
                android:text="@string/description"
                android:textColor="@color/title_black_transparent"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/llReview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/defaultPadding"
                style="@style/altarixUiText"
                />

            <TextView
                android:id="@+id/tvMenuWanted"
                style="@style/altarixUiText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_overlay_85"
                android:padding="@dimen/defaultPadding"
                android:text="@string/wanted_title"
                android:textColor="@color/title_black_transparent"
                android:textStyle="bold" />


            <LinearLayout
                android:id="@+id/llWanted"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>
